--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -114,6 +114,217 @@
 	box-shadow:0 0 2px 0 rgba(0,0,0,0.2),0 5px 12px 0 rgba(100,100,100,0.44);
 }
 
+/*animation*/
+.section_bg_img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+    -moz-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+    -o-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+    transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+}
 
+.section_bg_img_3{
+    top: 5rem;
+    left: .875rem;
+    opacity: 0;
+}
 
+.fp-viewing-page4 .section_bg_img_3{
+    top: 0;
+    left: 0;
+    opacity: 1;
+    -webkit-transition:opacity 300ms linear,top 600ms ease 300ms,left 600ms ease 100ms;
+    -moz-transition:opacity 300ms linear,top 600ms ease 300ms,left 600ms ease 100ms;
+    -o-transition:opacity 300ms linear,top 600ms ease 300ms,left 600ms ease 100ms;
+    transition:opacity 300ms linear,top 600ms ease 300ms,left 600ms ease 100ms;
+}
+
+.section_bg_img_4{
+    background:url(../img/film2.png) 50% 50% no-repeat;
+    background-size: 80%;
+    width: 50%;
+    opacity: .3;
+}
+
+.fp-viewing-page5 .section_bg_img_4{
+    width: 100%;
+    opacity: 1;
+    -webkit-transition:width 800ms ease,opacity 300ms linear;
+    -moz-transition:width 800ms ease,opacity 300ms linear;
+    -o-transition:width 800ms ease,opacity 300ms linear;
+    transition:width 800ms ease,opacity 300ms linear;
+}
+
+.row_text_1{
+    left: 5rem;
+    opacity: .1;
+    position: relative;
+}
+
+.design_img_b_2{
+    right: 5rem;
+    opacity: .1;
+    position: relative;
+}
+
+.fp-viewing-page8 .row_text_1{
+    left: 0;
+    opacity: 1;
+    -webkit-transition:opacity 800ms linear 300ms,left 600ms ease;
+    -moz-transition:opacity 800ms linear 300ms,left 600ms ease;
+    -o-transition:opacity 800ms linear 300ms,left 600ms ease;
+    transition:opacity 800ms linear 300ms,left 600ms ease;
+}
+
+.fp-viewing-page8 .design_img_b_2{
+    right: 0;
+    opacity: 1;
+    -webkit-transition:opacity 800ms linear,right 600ms ease 300ms;
+    -moz-transition:opacity 800ms linear,right 600ms ease 300ms;
+    -o-transition:opacity 800ms linear,right 600ms ease 300ms;
+    transition:opacity 800ms linear,right 600ms ease 300ms;
+}
+
+.design_img_b_1{
+    top: 3rem;
+    left: .875rem;
+    opacity: 0;
+}
+
+.fp-viewing-page7 .design_img_b_1{
+    top: 0;
+    left: 0;
+    opacity: 1;
+    -webkit-transition:opacity 300ms linear,top 600ms ease 300ms,left 300ms ease;
+    -moz-transition:opacity 300ms linear,top 600ms ease 300ms,left 300ms ease;
+    -o-transition:opacity 300ms linear,top 600ms ease 300ms,left 300ms ease;
+    transition:opacity 300ms linear,top 600ms ease 300ms,left 300ms ease;
+}
+
+.s_b_i_1,.s_b_i_2{
+    position: relative;
+    left: -1000px;
+    opacity: 0;
+    -webkit-transition:all 1s cubic-bezier(0.05,1,0.75,1);
+    -moz-transition:all 1s cubic-bezier(0.05,1,0.75,1);
+    -o-transition:all 1s cubic-bezier(0.05,1,0.75,1);
+    transition:all 1s cubic-bezier(0.05,1,0.75,1);
+}
+
+.section_bg_img_ani{
+    right: -50px;
+    position: relative;
+    opacity: 0.1;
+}
+
+.fp-viewing-page4 .section_bg_img_ani{
+    right: 0;
+    opacity: 1;
+}
+
+.fp-viewing-page6 .s_b_i_1{
+    opacity: 1;
+    left: 0;
+}
+.fp-viewing-page6 .s_b_i_2{
+    -webkit-transition-delay:.4s;
+    transition-delay:.4s;
+    opacity: 1;
+    left: 0;
+}
+
+/*see word*/
+.fp-viewing-page2 .section_img .section_bg_img_1{
+    right: 0;
+}
+
+.fp-viewing-page4 .section_img .section_bg_img_2{
+    background-size:90%;
+}
+
+.fp-viewing-page3 .splitter_img{
+    bottom: -50px;
+    opacity: 1;
+}
+
+.step{
+    width: 33.33333%;
+    float: left;
+    color: #999;
+    font-size: .65rem;
+    position: relative;
+    top: 20px;
+    opacity: .2;
+    -webkit-transition:all 1s .4s ease-out;
+    -moz-transition:all 1s .4s ease-out;
+    -o-transition:all 1s .4s ease-out;
+    transition:all 1s .4s ease-out;
+}
+.step:first-child{
+    -webkit-animation-delay: .2s;
+    transition-delay:.2s;
+}
+.step:last-child{
+    -webkit-animation-delay: .6s;
+    transition-delay:.6s;
+}
+
+.fp-viewing-page5 .section_list .section_list_row .step{
+    top: 0px;
+    opacity: 1;
+}
+
+/*HCI*/
+.design_img_b_1{
+    position: relative;
+    left: -200px;
+    z-index: 3;
+    opacity: 0;
+    -webkit-transition:all 1.5s cubic-bezier(0.05,1.1,0.75,1);
+    -moz-transition:all 1.5s cubic-bezier(0.05,1.1,0.75,1);
+    -o-transition:all 1.5s cubic-bezier(0.05,1.1,0.75,1);
+    transition:all 1.5s cubic-bezier(0.05,1.1,0.75,1);
+}
+.fp-viewing-page3 .design_img_b_1{
+    left: 0;
+    opacity: 1;
+}
+
+.cb_hci .section_img{
+    width: 65%;
+    background: #fff;
+    right:0px;
+    z-index: 10;
+    -webkit-transition:all 1.5s cubic-bezier(0.95,1,0.15,1);
+    -moz-transition:all 1.5s cubic-bezier(0.95,1,0.15,1);
+    -o-transition:all 1.5s cubic-bezier(0.95,1,0.15,1);
+    transition:all 1.5s cubic-bezier(0.95,1,0.15,1);
+}
+
+.cb_hci .section_img_ani{
+    width: 100%;
+    -webkit-transition:all .97s .5s cubic-bezier(0.05,1.1,0.75,1);
+    -moz-transition:all .97s .5s cubic-bezier(0.05,1.1,0.75,1);
+    -o-transition:all .97s .5s cubic-bezier(0.05,1.1,0.75,1);
+    transition:all .97s .5s cubic-bezier(0.05,1.1,0.75,1);
+}
+
+.fp-viewing-page10 .section_img_ani{
+    width: 65%;
+}
+
+.tv-slider li img{
+    width: 50%;
+}
+
+.tv-box{ -webkit-box-sizing:border-box; box-sizing:border-box;width:50%; height:70%; margin:0 auto;}
+.tv-slider{position: relative;}
+.tv-slider li{ list-style: none; position:absolute; opacity:0; width:100%; left: 0; right: 0; top:20px; -webkit-transition:opacity 400ms; transition:opacity 400ms;transition:opacity 400ms; transition:opacity 400ms;}
+.tv-slider .currented{ opacity:1;}
+.tv-slider img{ width:100%; vertical-align:bottom; box-shadow: 0 2px 5px rgba(0,0,0,.3);}
+.slider-indicator{ height:20px; text-align:center; margin-top:10px;}
+.slider-indicator li{ display:inline-block; height:.4125rem; width:.4125rem; border-radius:.4125rem; line-height:.825rem; background:#6a6a6a; margin:.275rem; vertical-align:top;}
+.slider-indicator .currented{ background:#1fb279;}
 
