--- a/css/css3.css
+++ b/css/css3.css
@@ -290,7 +290,7 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .seeword_logo_img{
-	background: url(../img/logo.png) 50% 50% no-repeat;
+	background: url(../img/l-bg.png) 50% 50% no-repeat;
 	background-size: 55%;
 }
 
