--- a/css/css3.css
+++ b/css/css3.css
@@ -23,6 +23,32 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
 
+
+.menu_list{
+	position: absolute;
+    height: 97px;
+    width: 63%;
+    display: inline-block;
+    right: 0;
+}
+
+.menu_list li{
+	list-style: none;
+    width: 20%;
+    display: inline-block;
+    float: right;
+    padding: 35px 0 35px 0;
+}
+
+.menu_list li a{
+	color: #333;
+	font-weight: 500;
+}
+
+.menu_list li a:hover{
+	color: #FA217C;
+}
+
 .fp-tableCell{
 	height: 100% !important;
 }
@@ -70,36 +96,6 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	transition:all 1s cubic-bezier(0.05,1.1,0.75,1);
 }
 
-.left_back{
-	width: 100px;
-	height: 100%;
-	top: 0;
-	left: 0;
-	display: block;
-	position: absolute;
-	background: #fff;
-	z-index: 1;
-	border-right: 1px solid rgba(50,50,50,.08);
-	box-shadow: 2px 0px 3px rgba(50,50,50,0.05);
-	opacity: 0;
-}
-.left_back a{
-	display: block;
-	height: 100%;
-}
-
-.left_back:hover{
-	opacity: .6;
-	background: #fff;
-	-webkit-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-	-moz-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-	-o-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-	transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-}
-
-.left_back a:hover span{
-	background: url(../img/back_hover.png) no-repeat;
-}
 /*first page btn*/
 .btn_down_el{
 	  position: absolute;
@@ -140,6 +136,10 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	background: #258de8;
 }
 
+.cb_fans .btn_down_el:before, .cb_fans .btn_down_el:after{
+	background: rgb(255,184,35);
+}
+
 .btn_down_el:after{
   -webkit-transform: rotate(45deg);
   -webkit-transform-origin: 0 100%;
@@ -168,6 +168,12 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 
 .section_bg_img_1{
     right: -300px;
+}
+
+.cb_fans .section_bg_img_1{
+    height: auto;
+    width: 70%;
+    padding: 25vh 100px 25vh 0;
 }
 
 .section_bg_img_2{
@@ -333,7 +339,7 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 		height: 100%;
 	}
 
-.menu {
+.menubar {
 	position: relative;
 	text-decoration: none;
 	width: auto;
@@ -344,31 +350,10 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	float: right;
 }
 
-.menu li {
+.menubar li {
 	padding: 10px 0 10px 40px;
 	color: #666;
 }
-
-.menu_resume li a, .menu_myself li a ,.menu_portfolio li a{
-	color: rgba(100,100,100,.4);
-}
-
-.menu li a:hover{
-	color: rgba(255,255,255,1);
-}
-
-.menu_resume li a:hover{
-	color: rgba(100,100,100,.9);
-}
-
-.menu_myself li a:hover{
-    color: rgba(100,100,100,.9);	
-}
-
-.menu_portfolio li a:hover{
-	color: rgba(100,100,100,.9);
-}
-
 
 .header a {
 	text-decoration: none;
@@ -378,22 +363,6 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 .selected a{
 	color: #fff!important;
 	font-weight: 800;
-}
-
-.scrolled .selected a{
-	color: rgb(20,28,39)!important;
-}
-
-.menu_resume .selected a{
-	color: rgb(20,28,39)!important;
-}
-
-.menu_myself .selected a{
-	color: rgb(20,28,39)!important;
-}
-
-.menu_portfolio .selected a{
-	color: rgb(20,28,39)!important;
 }
 
 .title_header{
@@ -981,7 +950,7 @@ keyframes shrink{
 .heading2{
 	font-size: 1.875rem;
 	text-align: center;
-	padding: 25vh 0;
+	padding-top: 200px;
 	color: rgba(255,255,255,.8);
 }
 
@@ -1093,6 +1062,10 @@ keyframes shrink{
 	background: rgba(37,141,232,.97);
 }
 
+.cb_fans .part_0:before{
+	background: rgba(255,184,35,.97);
+}
+
 /*HCI*/
 .cb_hci .part_0{
     background: url(../img/hci_b.jpg) no-repeat;
@@ -1116,14 +1089,17 @@ keyframes shrink{
 	background: url(../img/film_b.jpg) no-repeat;
 	background-size: cover;
     background-position: center;
-	height: 64vh;
 }	
 
 .cb_seeword .part_0{
 	background: url(../img/seeword2.2.png) no-repeat;
 	background-size: cover;
 	background-position: center;
-	height: 64vh;
+}
+
+.cb_fans .part_0{
+	background: url(../img/5.png) 50% 50% no-repeat;
+	background-size: 18%;
 }
 
 
@@ -1154,17 +1130,6 @@ keyframes shrink{
 
 .cb_sce .web_link a{
 	color: #f45b5b;
-}
-/*fans*/
-.cb_fans .number_box, .cb_fans .title_line{
-	background: #00a79d;
-}
-.cb_fans .title_inside{
-	color: #00a79d;
-}
-
-.cb_fans .web_link a{
-	color: #00a79d;
 }
 
 /*mila*/
