--- a/css/nav.css
+++ b/css/nav.css
@@ -1,8 +1,8 @@
-
 #navbar {
   width: 80px;
   height: 97px;
   display: block;
+  float: right;
 }
 
 .menubtn {
@@ -22,13 +22,14 @@
 .menubtn:hover, .openmenu .menubtn {
   color: #bdd43e;
   background-image: url('../img/nav_menu_hover.png');
+  z-index: 999;
 }
 
-/** toggle menu **/
+/** toggle menu 
 body.openmenu {
   position: fixed;
   overflow: hidden;
-}
+} **/
 
 #pgcontainer {
   padding: 45px 0;
@@ -63,7 +64,8 @@ body.openmenu {
   box-shadow: 3px 0 7px rgba(0,0,0,0.55);
 }
 #hamburgermenu ul {
-  margin-top: 45px;
+  margin-top: 97px;
+  padding-left: 45px;
   z-index: 101;
   overflow-y: auto;
   overflow-x: hidden;
@@ -76,8 +78,8 @@ body.openmenu {
   min-width: 130px;
   padding: 18px 8px;
   color: #333;
-  font-size: 1.45em;
-  font-weight: bold;
+  font-size: 1em;
+  font-weight: 500;
   text-decoration: none;
   text-align: left;
 }
